traces/bug_170.txt
examples++-load/BernardiRaugel.cpp:126: error: DEAD_STORE
  The value written to &l4_2 (type double) is never used.
Showing all 1 steps of the trace


examples++-load/BernardiRaugel.cpp:126:3: Write of unused value
124.   		R2 A(K[0]), B(K[1]), C(K[2]);
125.   		R l0 = 1-P.x-P.y, l1 = P.x, l2 = P.y;
126.   		R l4_0 = (4*l0-1), l4_1 = (4*l1-1), l4_2 = (4*l2-1);
         ^
127.   		// int_e_1 l0*l0 = |e_1|/3 and int_e_1 l0*l1 = |e_1|/6
128.   		// to get the flux = 1
